@@ -63,6 +63,7 @@ namespace PeasantRevenge
         public float peasantRevengeSartTimeInDays = 0.2f;
         public int peasantRevengeMaxPartySize = 5;
         public float peasantRevengePartyTalkToLordDistance = 2.0f;
+        public float peasantRevengePartyWaitLordDistance = 0.5f;
         public bool allowLordToKillMessenger = true;
         public bool allowPeasantToKillLord = true;
         public string logColorForClan = "hFF0000FF";
