@@ -95,5 +95,6 @@ Feature: Added configuration parameter enableOtherNobleTraitsChangeAfterNobleExe
 Feature: Added configuration parameter lordTraitChangeWhenLordPersuedeNotableNotToRevenge
          Added configuration parameter lordTraitChangeWhenLordPersuedeNotableToRevenge
          Purpose of the persuasion will influence your hero traits accordingly.
-Feature: Added dialogue option to return from notable peasant persuasion options into main hero options.
+Feature: Added dialogue option to return from revenger peasant persuasion options into main hero options.
+Feature: Added  configuration parameter  peasantRevengePartyWaitLordDistance. Notable peasant's party will wait for player to initiate dialogue at this distance.
 
